--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "clean": "rm -Rf dist && mkdir dist",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepublish": "npm run build",
-    "postintall": "npm run build"
+    "postinstall": "npm run build"
   },
   "repository": {
     "type": "git",
